--- a/index.html
+++ b/index.html
@@ -136,11 +136,26 @@ const firebaseConfig = {
         // Obtener el ID del carrito de la URL
         const urlParams = new URLSearchParams(window.location.search);
         const cartId = urlParams.get('cartId');
-        
-        if (!cartId) {
-            showEmptyCart();
-            return;
-        }
+        console.log("ID del carrito recibido:", cartId); // Para debuggear
+
+// POR ESTA (más robusta):
+if (cartId) {
+    db.collection("carts").doc(cartId).get()
+        .then(doc => {
+            if (doc.exists) {
+                const cartData = doc.data();
+                // Aquí tu lógica para mostrar productos (la que ya tenías)
+                console.log("Datos recibidos:", cartData); // Debug
+            } else {
+                alert("Carrito vacío. Redirigiendo...");
+                window.location.href = "carrito.html";
+            }
+        })
+        .catch(error => console.error("Error Firebase:", error));
+} else {
+    alert("Error: No hay ID de carrito");
+    window.location.href = "carrito.html";
+}
         
         // Referencia al carrito en Firestore
         const cartRef = db.collection('carts').doc(cartId);
